syntax = "proto3";
package sonrhq.identity.module.v1;

import "cosmos/orm/v1/orm.proto";
import "cosmos/orm/v1alpha1/schema.proto";

// CoinType is the BIP-0044 coin type for each supported coin.
enum CoinType {
  // Bitcoins coin type is 0
  COIN_TYPE_UNSPECIFIED = 0;

  // Testnet coin type is 1
  COIN_TYPE_ATOM = 1;

  // Litecoin coin type is 2
  COIN_TYPE_AXELAR = 2;

  // Dogecoin coin type is 3
  COIN_TYPE_BITCOIN = 3;

  // Ethereum coin type is 60
  COIN_TYPE_ETHEREUM = 4;

  // Sonr coin type is 703
  COIN_TYPE_EVMOS = 5;

  // Cosmos coin type is 118
  COIN_TYPE_FILECOIN = 6;

  // Filecoin coin type is 461
  COIN_TYPE_JUNO = 7;

  // Handshake coin type is 5353
  COIN_TYPE_OSMO = 8;

  // Solana coin type is 501
  COIN_TYPE_SOLANA = 9;

  // Ripple coin type is 144
  COIN_TYPE_SONR = 10;

  // Stargaze coin type is 1001
  COIN_TYPE_STARGAZE = 11;
}

// Module is the app config object of the module.
// Learn more: https://docs.cosmos.network/main/building-modules/depinject
message State {
  option (cosmos.orm.v1alpha1.module_schema) = {
    schema_file : {id : 1 proto_file_name : "identity/module/v1/state.proto"}
  };
}

// Account is the root sonr account table which contains all sub-identities.
message Account {
  option (cosmos.orm.v1.table) = {
    id : 1
    primary_key : {fields : "index" auto_increment : true}
    index : {id : 1 fields : "address" unique : true}
    index : {id : 2 fields : "public_key" unique : true}
  };

  uint64 index = 1;
  uint64 sequence = 2;
  string address = 3;
  string controller = 4;
  CoinType coin_type = 5;
  bytes public_key = 6;
  bytes peer_id = 7;
  string network = 8;
}

// Blockchain is the configuration table for connected blockchains
message Blockchain {
  option (cosmos.orm.v1.table) = {
    id : 3
    primary_key : {fields : "index" auto_increment : true}
    index : {id : 1 fields : "chain_id" unique : true}
    index : {id : 2 fields : "name" unique : true}
  };

  uint64 index = 1;
  string chain_id = 2;
  uint32 chain_code = 3;
  string name = 4;
  string hrp = 5;
  string did_method = 6;
  repeated string denoms = 7;
  string channel_id = 8;
}

// Credential is the total supply of the module.
message Credential {
  option (cosmos.orm.v1.table) = {
    id : 2
    primary_key : {fields : "id" auto_increment : true}
    index : {id : 1 fields : "handle"}
    index : {id : 2 fields : "origin,handle" unique : true}
    index : {id : 3 fields : "credential_id" unique : true}
    index : {id : 4 fields : "public_key" unique : true}
  };

  uint64 id = 1;
  string handle = 2;
  repeated string transport = 3;
  bytes public_key = 4;
  string attestation_type = 5;
  bytes credential_id = 6;
  string origin = 7;
}

// Identifier is a psuedo-anonomyous representation of a unique id on the Sonr blockchain. Used as
// authorizer to the underlying wallet interface.
message Identifier {
  option (cosmos.orm.v1.table) = {
    id : 4
    primary_key : {fields : "index" auto_increment : true}
  };

  uint64 index = 1;
  string method = 2;
  string identifier = 3;
}
